rollouts/bluegreen-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-calculator
  labels:
    app: calculator-app
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: 024848485298.dkr.ecr.us-west-2.amazonaws.com/argo-updated-image:latest
        imagePullPolicy: Always
        ports:
         - containerPort: 5000
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: rollouts-bluegreen-active
      previewService: rollouts-bluegreen-preview
