rollouts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-svc
spec:
  type: ClusterIP
  selector:
    app: calculator-app
  ports:
    - port: 5002
      targetPort: 5000
